--- a/releases.json
+++ b/releases.json
@@ -1,7 +1,7 @@
 [
   {
     "version": "1.0.1",
-    "downloadUrl": "https://bitbucket.org/owldesign/nutshell-craft-plugin-api/get/1ae1b4798157.zip",
+    "downloadUrl": "https://github.com/owldesign/Nutshell---Craft-CMS-Plugin-API/archive/master.zip",
     "date": "2017-08-22T21:56:04-07:00",
     "critical": true,
     "notes": [
@@ -10,7 +10,7 @@
   },
   {
     "version": "1.0.2",
-    "downloadUrl": "https://bitbucket.org/owldesign/nutshell-craft-plugin-api/get/1ae1b4798157.zip",
+    "downloadUrl": "https://github.com/owldesign/Nutshell---Craft-CMS-Plugin-API/archive/master.zip",
     "date": "2017-08-22T22:04:20-07:00",
     "critical": true,
     "notes": [
